--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,15 +1,12 @@
-version: '3'
+version: "3.8"
 services:
-    mongodb:
-      image: mongo:latest
-      container_name: mongo_db
-      environment:
-        # - MONGO_INITDB_DATABASE=默认的数据库
-        - MONGO_INITDB_ROOT_USERNAME=root
-        - MONGO_INITDB_ROOT_PASSWORD=root
-      volumes:
-        # - ./mongo/init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
-        - ./mongo/mongo-volume:/data/db
-      ports:
-        - "27017:27017"
-      restart: always
+  mongodb:
+    image: mongo:4.1
+    container_name: mongodb
+    ports:
+      - 27017:27017
+    # volumes:
+    #   - ./database:/data/db
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=root
+      - MONGO_INITDB_ROOT_PASSWORD=root
