--- a/settings.local.toml
+++ b/settings.local.toml
@@ -5,7 +5,8 @@ run_level = "development"
     port = 2835 # 指定服务器
 
 [mongo]
-    host = "192.168.1.3"
+    #host = "192.168.1.3"
+    host = "172.19.0.2"
     port = "27017"
     user = "root"
     passwd = "root"
